@@ -1,5 +1,7 @@
 1.26.0
 ------
+TODO: avoid MPG123_NEED_MORE from non-feed reader reading frame
+bodies or see it as a feature
 - Starting to intentionaly use C99 in the codebase. API headers are still
   supposed to be compatible to C89.
 - Default build with proper integer rounding (--enable-int-quality) now.
